# SpendMate

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  seed_test_data.py
backend/api/: crypto.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_transaction_user.py  0003_transaction_upi_id_index_alter_transaction_balance_and_more.py
backend/api/services/: parser.py
backend/core/: settings.py
frontend/: .dockerignore  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Dashboard.jsx  DayTransactions.jsx  Landing.jsx  Login.jsx  PersonAnalysis.jsx  PersonDetail.jsx  Register.jsx  UPISearch.jsx  Upload.jsx
